Fix T80126: Alembic Import dialogue has overwrite protection UI

Use `FILE_OPENFILE` when importing, rather than `FILE_SAVE`.

Reviewed By: sybren

Differential Revision: https://developer.blender.org/D8715